feat: add `GetLinkViewsHandler` (#29)
* feat: limit max tracking date

* feat: add `GetLinkViewsHandler`

---------
