# internal/core/model/redirect_request_data.go
@@ -1,0 +1,6 @@
+package model
+
+type RedirecsRequestData struct {
+	Ip        string
+	UserAgent string
+}
