# internal/data/dto/link_visit_dto.go
@@ -1,6 +1,10 @@
 package dto
 
-import "time"
+import (
+	"time"
+
+	"gotiny/internal/core/model"
+)
 
 const (
 	LinkVisitPKPrefix = "LINK#"
@@ -15,4 +19,13 @@ type LinkVisitDto struct {
 	CreatedAt time.Time
 	TTL       *uint
 	// TODO: location
+}
+
+func LinkVisitDtoToModel(dto LinkVisitDto) model.LinkVisit {
+	return model.LinkVisit{
+		Id:        dto.SK[len(LinkVisitSKPrefix):],
+		IpAddress: dto.Ip,
+		UserAgent: dto.UserAgent,
+		CreatedAt: dto.CreatedAt,
+	}
 }
